login and signup, forgot password api call with UI

--- a/VoipApplicationProject/Views/Customer/Index.cshtml
+++ b/VoipApplicationProject/Views/Customer/Index.cshtml
@@ -9,7 +9,7 @@
     <thead>
         <tr>
             <th class="d-none">
-                @Html.DisplayNameFor(model => model.CustomerId)
+                @Html.DisplayNameFor(model => model.Id)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.CustomerName)
@@ -37,7 +37,7 @@
         {
             <tr>
                 <td class="d-none">
-                    @Html.DisplayFor(modelItem => item.CustomerId)
+                    @Html.DisplayFor(modelItem => item.Id)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.CustomerName)
