--- a/VoipApplicationProject/Views/Customer/Login.cshtml
+++ b/VoipApplicationProject/Views/Customer/Login.cshtml
@@ -30,8 +30,8 @@
                 <span asp-validation-for="CustomerTypeID" class="text-danger"></span>
 
                 <div class="form-group mt-3">
-                    <input asp-for="CustomerName" class="form-control" placeholder="Username*" />
-                    <span asp-validation-for="CustomerName" class="text-danger"></span>
+                    <input asp-for="Email" class="form-control" placeholder="Username*" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <input asp-for="Password" class="form-control" placeholder="Password*" />
