added foriegn keys

--- a/VoipApplicationProject/Views/Customer/Login.cshtml
+++ b/VoipApplicationProject/Views/Customer/Login.cshtml
@@ -39,7 +39,7 @@
                 </div>
                 <div class="form-group row">
                     <div class="col-6">
-                        @Html.CheckBox("chckbox", false)
+                        @Html.CheckBox("ChkRememberMe", false)
                         <label class="mx-2">Remember Me</label>
                     </div>
                     <div class="col-6 text-right">
@@ -53,7 +53,7 @@
                 </div>
                 <div class="form-group text-center mb-0">
                     <label>Dont't have an account? </label>
-                    <a href="Customer/SignUp">Sign Up</a>
+                    <a href="SignUp">Sign Up</a>
                 </div>
                 <div class="form-group text-center">
                     <label>To access demo account link</label>
