Forgot & reset password api call

--- a/VoipApplicationProject/Views/Customer/ForgotPassword.cshtml
+++ b/VoipApplicationProject/Views/Customer/ForgotPassword.cshtml
@@ -36,6 +36,6 @@
     }
     else
     {
-        <script>alert("Your email is incorrect. Please try again");</script>
+        <script>alert("Your email doesn't exist. Please try again with valid email.");</script>
     }
 }
