--- a/VoipApplicationProject/Views/Customer/ResetPassword.cshtml
+++ b/VoipApplicationProject/Views/Customer/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model VoipApplicationProject.Models.CustomerModel
+﻿@model VoipApplicationProject.Models.ResetPasswordModel
 
 @{
     ViewData["Title"] = "ResetPassword";
@@ -8,13 +8,17 @@
 
 <h4>CustomerModel</h4>
 <hr />
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="ResetPassword">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>            
+            <input type="hidden" id="TxtToken" name="Token" />
+            <input type="hidden" id="TxtEmail" name="Email" />
+
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label class="control-label">New Password</label>
-                <input asp-for="Password" class="form-control" placeholder="Password*"/>
+                <input asp-for="Password" class="form-control" placeholder="Password*" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -26,12 +30,35 @@
             </div>
         </form>
     </div>
+    @if (!String.IsNullOrEmpty(ViewBag.ShowAlert))
+    {
+        if (ViewBag.ShowAlert == "failed")
+        {
+            <script>alert("Reset password failed. Please try again!");</script>
+        }
+    }
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
+<script src="/lib/jquery/dist/jquery.min.js"></script>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+<script>
+    $(document).ready(function () {
+        var email = getUrlVars()["email"];
+        var token = getUrlVars()["token"];
+
+        $("#TxtToken").val(token);
+        $("#TxtEmail").val(email);
+    });
+
+    function getUrlVars() {
+        var vars = [], hash;
+        var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
+        for (var i = 0; i < hashes.length; i++) {
+            hash = hashes[i].split('=');
+            vars.push(hash[0]);
+            vars[hash[0]] = hash[1];
+        }
+        return vars;
+    }
+</script>
