--- a/VoipApplicationProject/Views/Customer/ResetPassword.cshtml
+++ b/VoipApplicationProject/Views/Customer/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model VoipApplicationProject.Models.ResetPasswordModel
+﻿@model VoipApplicationProject.Models.CustomerModel
 
 @{
     ViewData["Title"] = "ResetPassword";
