Forgot Password & Reset Password UI

--- a/VoipApplicationProject/Views/Customer/Login.cshtml
+++ b/VoipApplicationProject/Views/Customer/Login.cshtml
@@ -43,7 +43,7 @@
                         <label class="mx-2">Remember Me</label>
                     </div>
                     <div class="col-6 text-right">
-                        <a href="#">Forgot Password ?</a>
+                        <a href="ForgotPassword">Forgot Password ?</a>
                     </div>
                 </div>
                 <div class="form-group">
