--- a/VoipApplicationProject/Views/Customer/ResetPassword.cshtml
+++ b/VoipApplicationProject/Views/Customer/ResetPassword.cshtml
@@ -4,40 +4,39 @@
     ViewData["Title"] = "ResetPassword";
 }
 
-<h1>ResetPassword</h1>
-
-<h4>CustomerModel</h4>
-<hr />
-
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="ResetPassword">
+<div class="text-center">
+    <small>Note: Password length should be 8 characters with one upper case alphabet, one number and one special character required.</small>
+    <h3 class="mt-3">Finally, choose a new password</h3>
+    <label>Password must include at least 8 characters including at least 1 number or 1 special character</label>
+    <form asp-action="ResetPassword">
+        <div class="col-md-4 mx-auto mt-3">
             <input type="hidden" id="TxtToken" name="Token" />
             <input type="hidden" id="TxtEmail" name="Email" />
 
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label class="control-label">New Password</label>
+            <div class="form-group text-left">
+                <label class="control-label">New Password *</label>
                 <input asp-for="Password" class="form-control" placeholder="Password*" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group text-left">
+                <label class="control-label">Confirm Password *</label>
                 <input asp-for="ConfirmPassword" class="form-control" placeholder="Confirm Password*" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Submit" class="btn btn-primary" />
             </div>
-        </form>
-    </div>
-    @if (!String.IsNullOrEmpty(ViewBag.ShowAlert))
-    {
-        if (ViewBag.ShowAlert == "failed")
-        {
-            <script>alert("Reset password failed. Please try again!");</script>
-        }
-    }
+        </div>
+    </form>
 </div>
+@if (!String.IsNullOrEmpty(ViewBag.ShowAlert))
+{
+    if (ViewBag.ShowAlert == "failed")
+    {
+        <script>alert("Reset password failed. Please try again!");</script>
+    }
+}
 <script src="/lib/jquery/dist/jquery.min.js"></script>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
