--- a/VoipApplicationProject/Views/Customer/ForgotPassword.cshtml
+++ b/VoipApplicationProject/Views/Customer/ForgotPassword.cshtml
@@ -4,26 +4,21 @@
     ViewData["Title"] = "ForgotPassword";
 }
 
-<h1>Forgot Password ?</h1>
-
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="ForgotPassword">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-
-            <div class="form-group">
-                <input type="submit" value="Find Account" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
+<div class="col-md-4 mx-auto">
+    <h3 class="text-center">First. let's find your account</h3>
+    <div class="text-center"><label>Please enter your email ID</label></div>
+    <form asp-action="ForgotPassword">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="form-group">
+            <input asp-for="Email" class="form-control" placeholder="Enter your Email*"/>
+            <span asp-validation-for="Email" class="text-danger"></span>
+        </div>
+        <div class="form-group text-center">
+            <a href="Login" class="btn btn-light border">Cancel</a>
+            <input type="submit" value="Find Account" class="btn btn-primary" />
+        </div>
+    </form>
 </div>
-
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
