--- a/VoipApplicationProject/Views/Customer/Billing.cshtml
+++ b/VoipApplicationProject/Views/Customer/Billing.cshtml
@@ -8,21 +8,21 @@
 
 <div class="row">
     <div class="col-md-3">
-        <button type="submit" class="btn btn-dark" asp-area="" asp-controller="Home" asp-action="Index">ACCEPT & CONTINUE</a></button>
+        <button type="submit" class="btn btn-dark" style="background-color:blue" asp-area="" asp-controller="Home" asp-action="Index">REQUEST FOR TRAIL BALANCE</a></button>
     </div>
     <div class="col-md-3">
-        <button type="submit"class="btn btn-dark" asp-area="" asp-controller="Home" asp-action="Index">ACCEPT & CONTINUE</a></button>
+        <button type="submit" class="btn btn-dark" style="background-color:blue" asp-area="" asp-controller="Home" asp-action="Index">ADD BALANCE </button>
     </div>
     <div class="col-md-3">
-        <button type="submit" class="btn btn-dark" asp-area="" asp-controller="Home" asp-action="Index">ACCEPT & CONTINUE</a></button>
+        <button type="submit" class="btn btn-dark" data-toggle="modal" data-target="#BuyModal" style="background-color:blue" asp-area="" asp-controller="Home" asp-action="Index">BUY SUBSCRIPTION</button>
     </div>
     <div class="col-md-3">
-        <button type="submit" class="btn btn-dark" asp-area="" asp-controller="Home" asp-action="Index">ACCEPT & CONTINUE</a></button>
+        <button type="submit" class="btn btn-dark" style="background-color:blue" asp-area="" asp-controller="Home" asp-action="Index">DOWNLOAD INVOICE</button>
     </div>
 </div>
 <br>
 
-<table class="table table-bordered">
+<table id="example" class="table table-striped table-bordered" style="width:100%">
     <thead>
         <tr>
             <th>
@@ -49,5 +49,52 @@
             <th></th>
         </tr>
     </thead>
-   
+    <tbody>
+        <tr>
+            <td>1</td>
+            <td>Tiger Nixon</td>
+            <td>System Architect</td>
+            <td>Edinburgh</td>
+            <td>61</td>
+            <td>2011/04/25</td>
+            <td>$320,800</td>
+        </tr>
+</tbody>
 </table>
+
+
+<div class="modal fade " id="BuyModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header" style="text-align:center">
+                <h6 >Want to purchase our services</h6>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-md-2" style="margin-left:10px;height:100px;border:2px solid black ;background-color:dodgerblue">
+                        <label><a href="#" style="color:black;text-align:center">Country Wise Minutes Purchase</a></label>
+                    </div>
+                    <div class="col-md-2" style="margin-left: 10px; height: 100px;  border: 2px solid black; background-color: forestgreen">
+                        <label><a href="#" style="color: black; text-align: center">Buy Phone Number</a></label>
+                    </div>
+                    <div class="col-md-2" style="margin-left: 10px; height: 100px; border: 2px solid black; background-color: darkred">
+                        <label><a href="#" style="color: black; text-align: center">Buy Sub User</a></label>
+                    </div>
+                    <div class="col-md-2" style="margin-left: 10px; height: 100px; border: 2px solid black; background-color: yellowgreen">
+                        <label><a href="#" style="color:black;text-align:center">Buy Storage Space Time</a></label>
+                    </div>
+                </div>
+                <h5 style="margin-left:30%">Don't find what you need? <a href="#">Click Here</a></h5>
+            </div>
+        </div>
+    </div>
+</div>
+<div style="margin-left:70%">
+    <button type="submit" class="btn btn-dark " style="background-color:blue" asp-area="" asp-controller="Home" asp-action="Index">EXPORT TO EXCEL</button>
+</div>
+<script>
+    $('#example').DataTable();
+</script>
