--- a/VoipApplicationProject/Views/Customer/Billing.cshtml
+++ b/VoipApplicationProject/Views/Customer/Billing.cshtml
@@ -49,12 +49,12 @@
     <tbody>
         <tr style="height:30px">
             <td>1</td>
-            <td>Tiger Nixon</td>
-            <td>System Architect</td>
-            <td>Edinburgh</td>
-            <td>61</td>
             <td>2011/04/25</td>
+            <td>9:30 AM</td>
+            <td>User</td>
             <td>$320,800</td>
+            <td>Credit</td>
+            <td>Success</td>
         </tr>
 </tbody>
 </table>
@@ -75,7 +75,7 @@
                         <label><a href="#" style="color:black;text-align:center" data-toggle="modal" data-target="#BuyMinute">Country Wise Minutes Purchase</a></label>
                     </div>
                     <div class="col-md-2" style="margin-left: 10px; height: 100px;  border: 2px solid black; background-color: forestgreen">
-                        <label><a href="#" style="color: black; text-align: center"data-toggle="modal" data-target="#BuyPhone">Buy Phone Number</a></label>
+                        <label><a href="#" style="color: black; text-align: center"data-toggle="modal" data-target="#">Buy Phone Number</a></label>
                     </div>
                     <div class="col-md-2" style="margin-left: 10px; height: 100px; border: 2px solid black; background-color: darkred">
                         <label><a href="#" style="color: black; text-align: center" data-toggle="modal" data-target="#BuySub">Buy Sub User</a></label>
